--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -67,10 +67,11 @@
     "deadline": "Participations jusqu'au <strong>31 octobre 2025 à 23h59</strong> (heure de Paris).",
     "participateNow": "Participer maintenant",
     "description": "Le jeu-concours 100% transparent qui révolutionne les tirages en ligne. Chaque mois, des gagnants, des vrais !",
-    "legalInfo": "Infos légales",
+    "legalInfo": "Infos légales", 
     "gameRules": "Règlement du jeu",
     "terms": "Conditions générales",
     "privacy": "Politique de confidentialité",
+    "support": "Support client",
     "followUs": "Nous suivre",
     "snapchat": "Notre Snapchat",
     "instagram": "Instagram",
