--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -76,7 +76,7 @@
     "snapchat": "Notre Snapchat",
     "instagram": "Instagram",
     "copyright": "© 2025 Thetirage. Tous droits réservés.",
-    "gameInfo": "Jeu autorisé - Participation limitée aux résidents français de plus de 18 ans",
+    "gameInfo": "Jeu autorisé - Participation limitée aux résidents européens de plus de 18 ans",
     "viaPromoter": "Via le promoteur : {{code}}",
     "promoterSpace": "💰 Espace Promoteur"
   },
