--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -21,12 +21,12 @@
       "description": "Bronze, Silver ou Gold - Plus tu prends, plus tu as de chances de gagner !"
     },
     "step2": {
-      "title": "2. Attends le tirage",
-      "description": "Le tirage a lieu le dernier jour du mois. Suis-nous sur nos réseaux pour ne rien rater !"
+      "title": "2. Confirmation immédiate",
+      "description": "Reçois ta confirmation par email avec ton numéro de participation unique."
     },
     "step3": {
-      "title": "3. Reçois ton lot",
-      "description": "Si tu gagnes, nous te contactons sous 48h et t'envoyons ton lot gratuitement !"
+      "title": "3. Tirage en live",
+      "description": "Découvre le gagnant en direct sur nos réseaux - 100% transparent !"
     }
   },
   "stats": {
