--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -3,7 +3,7 @@
     "title": "Participe au tirage",
     "titleHighlight": "du mois 🎁",
     "subtitle": "1 ticket = 1 chance de gagner un <strong>iPhone 17 Pro Max</strong> ou une <strong>grosse cagnotte 💸</strong>",
-    "cta": "👉 Je prends mon ticket maintenant",
+    "cta": "👉 Je tente ma chance !",
     "confirmation": "⚡ Confirmation immédiate par email",
     "sharedBy": "Lien partagé par {{code}}"
   },
