--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -2,7 +2,7 @@
   "hero": {
     "title": "Participe au tirage",
     "titleHighlight": "du mois 🎁",
-    "subtitle": "1 ticket = 1 chance de gagner un <strong>iPhone 17 Pro Max</strong> ou une <strong>grosse cagnotte 💸</strong>",
+    "subtitle": "1 ticket = 1 chance de gagner un <strong>iPhone 17 Pro Max",
     "cta": "👉 Je tente ma chance maintenant !",
     "confirmation": "⚡ Confirmation immédiate par email",
     "sharedBy": "Lien partagé par {{code}}"
