--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -15,7 +15,7 @@
   },
   "howItWorks": {
     "title": "Comment ça marche ?",
-    "subtitle": "Participer au jeu-concours est simple comme bonjour !",
+    "subtitle": "Participer à notre concours, c'est simple comme bonjour !",
     "step1": {
       "title": "1. Choisis ton ticket",
       "description": "Bronze, Silver ou Gold - Plus tu prends, plus tu as de chances de gagner !"
