--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -66,7 +66,7 @@
     "lastChance": "Dernière chance !",
     "deadline": "Participations jusqu'au <strong>31 octobre 2025 à 23h59</strong> (heure de Paris).",
     "participateNow": "Participer maintenant",
-    "description": "Le jeu-concours 100% transparent qui révolutionne les tirages en ligne. Chaque mois, des gagnants, des vrais !",
+    "description": "Le jeu-concours 100% transparent qui révolutionne les tirages en ligne. Chaque mois, tentez d'etre notre heureux gagnant !",
     "legalInfo": "Infos légales", 
     "gameRules": "Règlement du jeu",
     "terms": "Conditions générales",
