--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -78,7 +78,7 @@
     "copyright": "© 2025 Thetirage. Tous droits réservés.",
     "gameInfo": "Jeu autorisé - Participation limitée aux résidents européens de plus de 18 ans",
     "viaPromoter": "Via le promoteur : {{code}}",
-    "promoterSpace": "Promoteurs"
+    "promoterSpace": "Promoteursssss"
   },
   "success": {
     "congratulations": "Félicitations !",
